; ModuleID = '/home/carl/AnghaBench/HandBrake/libhb/extr_common.c_hb_mixdown_get_default.c'
source_filename = "/home/carl/AnghaBench/HandBrake/libhb/extr_common.c_hb_mixdown_get_default.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@HB_AMIXDOWN_7POINT1 = common dso_local global i32 0, align 4
@HB_AMIXDOWN_5POINT1 = common dso_local global i32 0, align 4
@HB_AMIXDOWN_DOLBYPLII = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @hb_mixdown_get_default(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* %3, align 4
  switch i32 %6, label %11 [
    i32 130, label %7
    i32 129, label %7
    i32 128, label %7
    i32 136, label %7
    i32 135, label %7
    i32 132, label %7
    i32 134, label %7
    i32 133, label %7
    i32 137, label %9
    i32 131, label %9
  ]

7:                                                ; preds = %2, %2, %2, %2, %2, %2, %2, %2
  %8 = load i32, i32* @HB_AMIXDOWN_7POINT1, align 4
  store i32 %8, i32* %5, align 4
  br label %13

9:                                                ; preds = %2, %2
  %10 = load i32, i32* @HB_AMIXDOWN_5POINT1, align 4
  store i32 %10, i32* %5, align 4
  br label %13

11:                                               ; preds = %2
  %12 = load i32, i32* @HB_AMIXDOWN_DOLBYPLII, align 4
  store i32 %12, i32* %5, align 4
  br label %13

13:                                               ; preds = %11, %9, %7
  %14 = load i32, i32* %3, align 4
  %15 = load i32, i32* %4, align 4
  %16 = load i32, i32* %5, align 4
  %17 = call i32 @hb_mixdown_get_best(i32 %14, i32 %15, i32 %16)
  ret i32 %17
}

declare dso_local i32 @hb_mixdown_get_best(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
